Improving the emodel by Selecting which Algorithm to use

--- a/machine_learning+data_science/soccer/iris.ipynb
+++ b/machine_learning+data_science/soccer/iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -59,19 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "knn = KNeighborsClassifier(n_neighbors = 3)\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "knn = DecisionTreeClassifier()\n",
     "knn.fit(X_train, Y_train)\n",
     "Y_pred = knn.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
